# fxTap-Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  make-lib.sh  make-test.sh
include/: stb_ds.h
include/fxTap/: beatmap-casiowin.h  beatmap.h  bfile-interface.h  config.h  database.h  endian-utility.h  game.h  keymap.h  lib-config.h  mod.h  render.h
include/fxTap/database/: view.h
lib/: CMakeLists.txt
lib/include/fxTap/: beatmap-casiowin.h  beatmap.h  bfile-extern.h  config-casiowin.h  config.h  game.h  lib-config.h  render.h
lib/src/: beatmap-casiowin.c  beatmap.c  config-casiowin.c  config.c  game.c  keymap-beatmania.c  keymap-djmax.c  render.c
src/: beatmap-casiowin.c  beatmap.c  config-casiowin.c  config.c  database.c  endian-utility.c  game.c  keymap-beatmania.c  keymap-djmax.c  keymap.c  render.c  stb_ds.c
src/casiowin/: beatmap.c  config.c  database.c
src/database/: view.c
test/: CMakeLists.txt  main.c
